--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="andy.myapplication.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="测试按钮" />
 </RelativeLayout>
